--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.454.0",
+    "motion": "^11.14.1",
     "next": "15.0.2",
     "next-themes": "^0.4.1",
     "react": "19.0.0-rc-02c0e824-20241028",
